Feat (api) Added endpoint to get video's information (#302)
* added endpoint and documentation

* added API documentation

* added test

* Feat (webapp) video player now display the title correctly.

* added upload date to endpoint and front

* Fixed test of video_info_handler. Removed duplicate import.

* added documentation
